# web

./: 404.html  Dockerfile  __init__.py  api_login.py  app.py  daftar_hadir_siswa.html  daftar_hadir_siswa_ujian.html  dashboard.html  flask1.txt  flask2.txt  fly.toml  forgot_password.html  ganti_password.html  index.html  login.html  manage_Kehadiran.html  manage_Pembayaran.html  manage_jadwal.html  manage_jadwal_new.html  manage_kehadiran.html  manage_ujian.html  menu_pembayaran.html  pyproject.toml  register.html  reset_password.html  script.js  style.css  verif_email.html  view.py
